--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,9 @@
 name: Docker Image CI 
 on:
-  push: branches:[ main ]
-  pull_request: branches: [ main ]
+  push: 
+    branches: [ main ]
+  pull_request: 
+    branches: [ main ]
   
 jobs: 
   build: 
@@ -13,9 +15,9 @@ jobs:
         DOCKER_USER: ${{secrets.DOCKERHUB_USER}} 
         DOCKER_PASS: ${{secrets.DOCKERHUB_PASS}} 
       run: | 
-      docker login -u $DOCKER_USER -p $DOCKER_PASS
-  - name: Build the Docker image 
-    run: docker build . --file Dockerfile --tag pablomorenoquintero/express-randomquotes:latest 
+        docker login -u $DOCKER_USER -p $DOCKER_PASS
+    - name: Build the Docker image 
+      run: docker build . --file Dockerfile --tag pablomorenoquintero/express-randomquotes:latest 
     
-  - name: Docker Push 
-    run: docker push pablomorenoquintero/express-randomquotes
+    - name: Docker Push 
+      run: docker push pablomorenoquintero/express-randomquotes
