--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,10 +17,10 @@ jobs:
     - uses: actions/checkout@v2 
     - name: docker login
       env: 
-        DOCKER_USER: ${{ secrets.DOCKERHUB_USER }} 
-        DOCKER_PASS: ${{ secrets.DOCKERHUB_PASS }} 
+        DOCKER_USER: ${{secrets.DOCKERHUB_USER}} 
+        DOCKER_PASS: ${{secrets.DOCKERHUB_PASS}} 
       run: | 
-        echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+        docker login -u $DOCKER_USER -p $DOCKER_PASS
     - name: Build the Docker image 
       run: docker build . --file Dockerfile --tag pablomorenoquintero/express-randomquotes:latest 
     
